<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startbuttoncaption" />

        <Button
            android:id="@+id/buttonAbort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abortbuttoncaption" />

        <CheckBox
            android:id="@+id/checkBoxCameraUponStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/camerauponstartcaption" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brightnesslabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightnesslabel"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/brightnessval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="127" />

        <SeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="127" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delaylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delaylabel"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/delayval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:minEms="3" />

        <SeekBar
            android:id="@+id/seekBarDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statuslabel"
            android:textStyle="bold"
            android:minEms="3" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:text="@string/starting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rxlabel"
            android:textStyle="bold"
            android:minEms="3" />

        <TextView
            android:id="@+id/readBuffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:minLines="3"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/radioonbuttoncaption" />

        <Button
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/radiooffbuttoncaption" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/PairedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/pairedbuttoncaption" />

        <Button
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/discoverbuttoncaption" />
    </LinearLayout>

    <ListView
        android:id="@+id/devicesListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice" />

</LinearLayout>